1. Formatter 적용 중 2. DTO 정리중